# Practice

./: .gitignore  CMakeLists.txt  Client_test.cpp  Record.cpp  Record.hpp  SHM_client.cpp  SHM_server.cpp  Server_test.cpp  Test.cpp  bash_script  bash_script.sh  datawarehousestructs.hpp  makefile
MutexPractice/: Mutex.cpp
SharedMemoryPractice/: SHM.c  SHM_client.cpp  SHM_server.cpp
datawarehousestructs/: CMakeLists.txt
shared_memory_structs/: CMakeLists.txt  shared_memory_structs.hpp
